[tool.poetry]
name = "prompt-gen"
version = "0.1.0"
description = "Programmatically Generate RLHF Prompt-Generations"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"
packages = [{include = "prompt_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.9.3"
openai = "^0.27.7"
pandas = "^2.0.1"
pymupdf = "^1.22.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
